feat: getPrices returns a pageable list of different currencies and error message is localizable
