# driving/api-rest/src/main/java/com/bcnc/prices/controller/adapters/PriceControllerAdapter.java
@@ -5,14 +5,20 @@
 package com.bcnc.prices.controller.adapters;
 
 import com.bcnc.prices.api.rest.PricesApi;
-import com.bcnc.prices.api.rest.dto.ActivePriceDTO;
+import com.bcnc.prices.api.rest.dto.PricePaginatedDTO;
 import com.bcnc.prices.application.exceptions.BadRequestException;
 import com.bcnc.prices.application.ports.driving.PriceUseCasePort;
 import com.bcnc.prices.controller.mappers.DateTimeControllerMapper;
+import com.bcnc.prices.controller.mappers.PaginationControllerMapper;
 import com.bcnc.prices.controller.mappers.PriceControllerMapper;
+import com.bcnc.prices.controller.utils.MessageKeys;
+import com.bcnc.prices.controller.utils.ValidatorUtils;
+import com.bcnc.prices.domain.filters.ActivePriceFilter;
 import com.bcnc.prices.domain.models.values.ActivePrice;
 import java.time.LocalDateTime;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -23,18 +29,19 @@ public class PriceControllerAdapter implements PricesApi {
   private final PriceUseCasePort useCasePort;
   private final PriceControllerMapper mapper;
   private final DateTimeControllerMapper dateTimeControllerMapper;
+  private final PaginationControllerMapper paginationControllerMapper;
 
   @Override
-  public ResponseEntity<ActivePriceDTO> getActivePrice(String date, Long productId, Long brandId) {
-    LocalDateTime dateReq;
-    try {
-      dateReq = dateTimeControllerMapper.toDomain(date);
-    } catch (Exception e) {
-      throw new BadRequestException();
-    }
+  public ResponseEntity<PricePaginatedDTO> getPrices(String date, Long productId, Long brandId, Integer page, Integer pageSize) {
+    if (!ValidatorUtils.validateString(date)) throw new BadRequestException(MessageKeys.EXCEPTION_GET_PRICES_BAD_REQUEST_DATE);
 
-    ActivePrice activePrice = useCasePort.getActivePrice(dateReq, productId, brandId);
-    ActivePriceDTO activePriceDTO = mapper.toResponse(activePrice);
-    return ResponseEntity.ok(activePriceDTO);
+    LocalDateTime dateReq = dateTimeControllerMapper.toDomain(date);
+    ActivePriceFilter filter = new ActivePriceFilter(dateReq, productId, brandId);
+    Pageable pageable = paginationControllerMapper.toRequest(page, pageSize);
+
+    Page<ActivePrice> activePrices = useCasePort.find(filter, pageable);
+
+    PricePaginatedDTO response = mapper.toPricePaginatedResponse(activePrices);
+    return ResponseEntity.ok(response);
   }
 }
