# driving/api-rest/src/main/java/com/bcnc/prices/controller/mappers/PriceControllerMapper.java
@@ -4,14 +4,25 @@
  */
 package com.bcnc.prices.controller.mappers;
 
-import com.bcnc.prices.api.rest.dto.ActivePriceDTO;
+import com.bcnc.prices.api.rest.dto.PriceDTO;
+import com.bcnc.prices.api.rest.dto.PricePaginatedDTO;
 import com.bcnc.prices.domain.models.values.ActivePrice;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.springframework.data.domain.Page;
 
 @Mapper(
     componentModel = "spring",
-    uses = {DateTimeControllerMapper.class})
+    uses = {
+        DateTimeControllerMapper.class,
+        PaginationControllerMapper.class
+    })
 public interface PriceControllerMapper {
 
-  ActivePriceDTO toResponse(ActivePrice activePrice);
+  PriceDTO toResponse(ActivePrice activePrice);
+
+  @Mapping(target = "pagination", source = ".")
+  @Mapping(target = "items", source = "content")
+  PricePaginatedDTO toPricePaginatedResponse(Page<ActivePrice> activePrices);
+
 }
