# driving/api-rest/src/main/resources/prices-service-openapi.yml
@@ -16,38 +16,70 @@ tags:
     description: Operations related to product prices
 
 paths:
-  /prices/active:
+  /prices:
     get:
       tags:
         - Prices
-      operationId: getActivePrice
+      operationId: getPrices
       summary: Get pricing information for a product
       description: Returns the applicable price for a product in a brand within a specific date range.
       parameters:
+        - $ref: '#/components/parameters/AcceptLanguageHeader'
         - $ref: '#/components/parameters/DateQueryParam'
         - $ref: '#/components/parameters/ProductIdQueryParam'
         - $ref: '#/components/parameters/BrandIdQueryParam'
+        - $ref: '#/components/parameters/PageQueryParam'
+        - $ref: '#/components/parameters/PageSizeQueryParam'
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ActivePriceDTO'
+                $ref: '#/components/schemas/PricePaginatedDTO'
         '400':
           description: Invalid input parameters
-        '404':
-          description: No applicable price found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
 
 components:
   parameters:
+    AcceptLanguageHeader:
+      name: Accept-Language
+      in: header
+      required: false
+      description: Supported languages for the response (default is en_US).
+      schema:
+        type: string
+        enum: [ en-US, es-ES ]
+        default: en-US
+
     DateQueryParam:
       in: query
       name: date
       required: true
       schema:
         type: string
-        pattern: '^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}$'
         example: "2020-06-14T10:00:00"
       description: |
         Date and time for price applicability in local format (no timezone, pattern: yyyy-MM-dd'T'HH:mm:ss)
@@ -72,9 +104,82 @@ components:
         example: 1
       description: Identifier of the brand (e.g., 1 for ZARA).
 
+    PageQueryParam:
+      in: query
+      name: page
+      schema:
+        type: integer
+        default: 1
+        minimum: 1
+      description: The page number to retrieve.
+
+    PageSizeQueryParam:
+      in: query
+      name: pageSize
+      schema:
+        type: integer
+        minimum: 1
+        default: 10
+        maximum: 50
+      description: The number of items per page to retrieve.
+
   schemas:
-    ActivePriceDTO:
+
+    SlicePaginationDTO:
       type: object
+      required:
+        - currentPageSize
+        - currentPage
+        - hasNextPage
+      properties:
+        currentPageSize:
+          type: integer
+          maximum: 50
+          description: The current page size
+        currentPage:
+          type: integer
+          minimum: 1
+          description: The current page number
+        hasNextPage:
+          type: boolean
+          description: Whether or not there is a next page
+
+    PagePaginationDTO:
+      allOf:
+        - $ref: '#/components/schemas/SlicePaginationDTO'
+        - type: object
+          required:
+            - totalItems
+            - totalPages
+          properties:
+            totalItems:
+              type: integer
+              format: int64
+              description: The resource total items
+            totalPages:
+              type: integer
+              format: int64
+              description: The resource total pages
+
+    PageResponseDTO:
+      type: object
+      required:
+        - pagination
+      properties:
+        pagination:
+          $ref: '#/components/schemas/PagePaginationDTO'
+
+
+    PriceDTO:
+      type: object
+      required:
+        - productId
+        - brandId
+        - priceListId
+        - startDate
+        - endDate
+        - price
+        - currency
       properties:
         productId:
           type: integer
@@ -92,12 +197,10 @@ components:
         startDate:
           type: string
           description: Start date and time in local format (no timezone)
-          pattern: '^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}$'
           example: "2020-06-14T15:00:00"
         endDate:
           type: string
           description: End date and time in local format (no timezone)
-          pattern: '^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}$'
           example: "2020-06-14T18:30:00"
         price:
           type: number
@@ -106,5 +209,49 @@ components:
         currency:
           type: string
           example: EUR
+
+    PricePaginatedDTO:
+      allOf:
+        - $ref: '#/components/schemas/PageResponseDTO'
+      required:
+        - items
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/PriceDTO'
+
+    ErrorResponseDTO:
+      type: object
+      required:
+        - type
+        - title
+        - status
+        - detail
+        - instance
+      properties:
+        type:
+          type: string
+          description: A URI reference that identifies the problem type.
+          default: "about:blank"
+          example: "about:blank"
+        title:
+          type: string
+          description: A short, human-readable summary of the problem type.
+          example: "Bad Request"
+        status:
+          type: integer
+          format: int32
+          description: The HTTP status code generated by the origin server.
+          example: 400
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem.
+          example: "Failed to convert 'productId' with value: '35455A'"
+        instance:
+          type: string
+          description: A URI reference that identifies the specific occurrence of the problem.
+          example: "/prices"
+
 
   securitySchemes: {}
